--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,11 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files": [
+            "app/Helpers/UploadHelper.php",
+            "app/Helpers/UploadFromHTMLHelper.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
